src/objects/Schema_Definition__c.object
<CustomObject>
    <fields>
        <fullName>Definition__c</fullName>
        <label>Definition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supports_JSON__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Supports JSON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supports_XML__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supports XML</label>
        <type>Checkbox</type>
    </fields>
    <label>Easy Rest Schema Definition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Easy Rest Schema Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Easy Rest Schema Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>